# fcitx5-chewing

./: AUTHORS  CMakeLists.txt  INSTALL  Messages.sh  README  README.md  config.h.in  org.fcitx.Fcitx5.Addon.Chewing.metainfo.xml.in  org.fcitx.fcitx5-chewing.metainfo.xml.in
.github/workflows/: check.yml
cmake/: FindChewing.cmake
data/: CMakeLists.txt  chewing.conf.in  fcitx-chewing.conf.in  fcitx-chewing.desc
po/: CMakeLists.txt  POTFILES.in.in  ca.po  da.po  de.po  fcitx-chewing.pot  fcitx5-chewing.pot  fr.po  he.po  ja.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  chewing-addon.conf.in  chewing-addon.conf.in.in  chewing.conf.in  config.c  eim.c  eim.cpp  eim.h  fcitx-chewing.desc
test/: CMakeLists.txt  testchewing.cpp
test/addon/: CMakeLists.txt
test/inputmethod/: CMakeLists.txt
